Fixed disable responsive layout issue with cart and checkout

--- a/sass/woocommerce/_checkout.scss
+++ b/sass/woocommerce/_checkout.scss
@@ -150,10 +150,12 @@
 		}
 
 		@media (max-width: 768px) {
-			.checkout-details,
-			.order-details {
-				width: 100%;
-				float: none;
+			@at-root body.responsive#{&} {
+				.checkout-details,
+				.order-details {
+					width: 100%;
+					float: none;
+				}
 			}
 		}
 
